--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
+  <!--Comment start-->
 <!-- <a href="#bottomofpage"> Вниз </a> -->
 <!-- Hello, <abbr title="scientist"> student! </abbr> -->
 <h1 align="center"> Д Н К </h1>
@@ -63,6 +64,7 @@
 
 <a href="https://google.com" target="_blank" title="Нажми на меня"> Перейти в Google </a> <br>
 
+<!--Comment end-->
 </body>
 
 </html>
